Fix relative links for assets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Meeting Notes</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="/assets/favicon.png" type="image/x-icon"/>
+        <link rel="icon" href="./assets/favicon.png" type="image/x-icon"/>
     </head>
     <body>
         <nav>
@@ -64,15 +64,15 @@
             <div>
                 <h4>Important Attachments/Links</h4>
                 <ul>
-                    <li><img src="/assets/img1.jpg" alt="Whiteboard Snapshot" width="500"/></li>
+                    <li><img src="./assets/img1.jpg" alt="Whiteboard Snapshot" width="500"/></li>
                     <li><a href="https://medium.com/@peterlee2068/software-design-principles-every-programmer-should-know-c164a83c6f87">Software Design Principles</a></li>
                     <li>
                         <p>Team bonding trip to Van Gogh exhibition</p>
                         <video controls width="250">
-                            <source src="/assets/trip.mp4" type="video/mp4">                    
+                            <source src="./assets/trip.mp4" type="video/mp4">                    
                             Sorry, your browser doesn't support embedded videos.
                         </video>
-                        <audio controls src="/assets/trip-audio.m4a">
+                        <audio controls src="./assets/trip-audio.m4a">
                             Your browser does not support the <code>audio</code> element.
                         </audio>
                     </li>
