--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 color: rgb(32,178,170);
             }
 
-            h3 {
+            h3, 
+            h4, 
+            h5, 
+            h6 {
                 color: #008080;
             }
 
@@ -53,7 +56,7 @@
         <section class="section__agenda">
             <h2><i>Meeting Agenda</i></h2>
             <ol>
-                <li>Team Social/Icebreaker</li>
+                <li id="team-social">Team Social/Icebreaker</li>
                 <li>Addressing upcoming <strong>deadlines</strong> and <strong>deliverables</strong></li>
                 <li style="display: none;">Assigning tasks for next sprint</li>
             </ol>
@@ -117,7 +120,7 @@
                     <input type="text">
                     <label><b>Graduating Month</b></label>
                     <input type="date">
-                    <div>
+                    <div id="interests-checklist">
                         <label><b>Interests</b></label>
                         <input type="checkbox">
                         <label>Software Engineering</label>
